[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy",
    "PyYAML",
    "pybind11",
    "pip",
    "cmake",
    "ninja"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = "3"
[tool.cibuildwheel.linux]
build = "cp310-manylinux* cp311-manylinux*"
archs = ["aarch64"]
[tool.cibuildwheel.macos]
build = "cp310-* cp311-*"
archs = ["arm64"]
environment = { LIB_ARCH = "arm64" }
repair-wheel-command = "delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"