[build-system]
requires = ["setuptools>=42",
    "wheel",
    "numpy",
    "PyYAML",
    "pybind11",
    "pip",
    "cmake",
    "ninja"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.cibuildwheel]
before-build = "pip install -r build-requirements.txt -r requirements.txt -v"
# HOLY FUCK
# https://github.com/pypa/pip/issues/5229#issuecomment-387301397
environment = { PIP_NO_BUILD_ISOLATION = "false" }
build-verbosity = "3"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = "cp311-manylinux_x86_64"

[tool.cibuildwheel.macos]
build = "cp311-*"
archs = ["arm64"]
environment = { PIP_NO_BUILD_ISOLATION = "false", LIB_ARCH = "arm64" }
repair-wheel-command = "delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"