[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy",
    "PyYAML",
    "pybind11",
    "pip",
    "cmake",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "numpy",
    "pyframe_eval",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.cibuildwheel]
before-build = "pip install -r requirements.txt -v"
# HOLY FUCK
# https://github.com/pypa/pip/issues/5229#issuecomment-387301397
#environment = { PIP_NO_BUILD_ISOLATION = "true" }
build-verbosity = "3"

[tool.cibuildwheel.linux]
build = "cp311-manylinux_x86_64"
environment = { CIBW_ENVIRONMENT_PASS_LINUX = "TORCH_MLIR_DISTRO_ARCHITECTURE TORCH_MLIR_INSTALL_DIR" }

[tool.cibuildwheel.macos]
build = "cp311-*"
archs = ["arm64"]
environment = { CMAKE_OSX_ARCHITECTURES = "arm64", MACOSX_DEPLOYMENT_TARGET = 12.6 }
repair-wheel-command = "delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"